<resources>
    <string name="app_name">CinemHUB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">HOME</string>
    <string name="menu_preferiti">FAVORITES</string>
    <string name="menu_categorie">CATEGORIES</string>
    <string name="menu_nuovi_arrivi">NOW PLAYING</string>
    <string name="menu_prossime_uscite">UPCOMING</string>
    <string name="menu_piu_visti">MOST WATCHED</string>
    <string name="home_second">Home Second</string>
    <string name="menu_genere" />

    <string name="category_filter">Category</string>
    <string name="order_filter">Ordered By</string>
    <string name="year_filter">Year Range</string>
    <string name="start_date_filter">1929</string>
    <string name="end_date_filter">2027</string>
    <string name="vote_filter">Vote Range</string>
    <string name="start_vote_filter">0</string>
    <string name="end_vote_filter">10</string>

    <string name="movie_name">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">SortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="no_title">No Title</string>
    <string name="fullscreen_tutorial" />
    <string name="error_player" />
    <string name="search" />
    <string name="text">Testo qualsiasi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_search" />
    <string name="filter2">filter2</string>
    <string name="username">Username</string>
    <string name="year" />

    <string name="your_rating">Leave your Rating</string>
    <string name="edit_text">Write There:</string>
    <string name="show_vote">Your Rating:</string>
    <string name="your_comment">Your Comment:</string>
    <string name="user_rating">0 / 10</string>
    <string name="refresh" />
    <string name="refresh1" />

    <string name="popolari">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>

    <string name="warning_comment">Warning! you will overwrite your comment</string>
    <string name="warning_vote">Warning! you will overwrite your vote</string>
    <string name="warning_vote_comment">Warning! you will overwrite your vote and comment</string>
    <string name="connection_lost">Connection lost! if you choose to continue, you will only be able to see your Favorites. All other features will be unavailable</string>
    <string name="connection_lost1">Connection lost, please check it and retry</string>
    <string name="connection_alert">Internet Connection Alert</string>
    <string name="submit">Submit</string>
    <string name="imageView">ImageView</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

</resources>
