<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/your_vote"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_left"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding_layout"
        android:text="@string/your_rating"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/MyRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:isIndicator="false"
        android:max="10"
        android:numStars="10"
        android:stepSize="1.0" />

    <TextView
        android:id="@+id/show_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/show_vote"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/warning"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/user_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/edit_text"
        android:textColor="@color/editTextColor"
        android:focusable="false"
        android:imeOptions="actionDone"
        android:inputType="textImeMultiLine">
    </EditText>

    <Button
        android:id="@+id/submit_rating"
        android:background="@drawable/button_border"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/submit"
        android:layout_gravity="center_vertical|center_horizontal"/>

    <TextView
        android:id="@+id/text_comment"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/your_comment"
        android:padding="@dimen/padding_layout"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear_layout"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_star"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/star_on"
            android:contentDescription="@string/imageView"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="15dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/users_rating2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_rating"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_border"
            android:text="@string/delete" />

        <Button
            android:id="@+id/edit_rating"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/button_border"
            android:text="@string/edit"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="15dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
