<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_filter"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="16dp"
            android:textStyle="bold"
            android:textColor="@color/textColor"/>

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/textViewCategory"/>

        <TextView
            android:id="@+id/textViewOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_filter"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="360dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategory"
            android:textStyle="bold"
            android:textColor="@color/textColor"/>

        <Spinner
            android:id="@+id/spinnerOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/textViewOrder"/>

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_filter"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="347dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerOrder"
            android:textStyle="bold"
            android:textColor="@color/textColor"/>

        <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
            android:id="@+id/rangeSeekbarYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            app:min_value="1929"
            app:max_value="2027"
            app:corner_radius="10"
            app:bar_color="#909090"
            app:bar_highlight_color="@color/colorAccent"
            app:left_thumb_color="@color/colorAccent"
            app:right_thumb_color="@color/colorAccent"
            app:left_thumb_color_pressed="@color/colorSlider"
            app:right_thumb_color_pressed="@color/colorSlider"
            app:data_type="_integer"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/textViewYear"/>

        <TextView
            android:id="@+id/textViewMinYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date_filter"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="398dp"
            app:layout_constraintTop_toBottomOf="@+id/rangeSeekbarYear"
            android:textColor="@color/textColor"/>

        <TextView
            android:id="@+id/textViewMaxYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date_filter"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="398dp"
            app:layout_constraintTop_toBottomOf="@+id/rangeSeekbarYear"
            android:textColor="@color/textColor"/>

        <TextView
            android:id="@+id/textViewVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_filter"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="398dp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/textViewMinYear"
            android:textStyle="bold"
            android:textColor="@color/textColor"/>

        <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
            android:id="@+id/rangeSeekbarVote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            app:min_value="0"
            app:max_value="10"
            app:corner_radius="10"
            app:bar_color="#909090"
            app:bar_highlight_color="@color/colorAccent"
            app:left_thumb_color="@color/colorAccent"
            app:right_thumb_color="@color/colorAccent"
            app:left_thumb_color_pressed="@color/colorSlider"
            app:right_thumb_color_pressed="@color/colorSlider"
            app:data_type="_integer"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/textViewVote"/>

        <TextView
            android:id="@+id/textViewMinVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_vote_filter"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="398dp"
            app:layout_constraintTop_toBottomOf="@+id/rangeSeekbarVote"
            android:textColor="@color/textColor"/>

        <TextView
            android:id="@+id/textViewMaxVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_vote_filter"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="398dp"
            app:layout_constraintTop_toBottomOf="@+id/rangeSeekbarVote"
            android:textColor="@color/textColor"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>