<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDetail"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <com.like.LikeButton
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon_size="10dp"
                app:icon_type="heart"
                android:gravity="center_horizontal"
               />

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/movie_name"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/layout_margin_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:layout_marginStart="@dimen/layout_margin_left" />

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:gravity="center_horizontal"
                android:text="@string/plot"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:padding="@dimen/padding_layout"
                android:layout_marginStart="@dimen/layout_margin_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plotsynopsis"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:layout_marginStart="@dimen/layout_margin_left" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/rating"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/layout_margin_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usersRating"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:layout_marginStart="@dimen/layout_margin_left" />

            <TextView
                android:id="@+id/release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:gravity="center_horizontal"
                android:text="@string/release"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/layout_margin_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/releaseDate"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:padding="@dimen/padding_layout"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:layout_marginStart="@dimen/layout_margin_left" />


            <com.google.android.youtube.player.YouTubePlayerView
                android:id="@+id/player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin_top"/>

            <include layout="@layout/content_detail2" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>